<resources>
    <string name="logToSdcardFileName">baidu_map_log_debug_oem.log</string>
    <string name="app_name">@string/app_name_baidu_map</string>
    <string name="wifiWord">Wi-Fi</string>
    <string name="fav_empty_hint_for_nav">"没有发现收藏的内容，
登录帐号可以将收藏同步到云端！"</string>
    <string name="fav_empty_hint_for_pos_notlogin">"没有发现收藏的点
登录帐号可以将收藏同步到云端！"</string>
    <string name="fav_empty_hint_for_way_notlogin">"没有发现收藏的路线
登录帐号可以将收藏同步到云端！"</string>
    <string name="fav_empty_hint_for_pos_loginned">"没有发现收藏的点
您可以在地点详情页点击“收藏”按钮，收藏喜欢的地点"</string>
    <string name="fav_empty_hint_for_way_loginned">"没有发现收藏的路线
您可以在路线列表页点击“收藏”按钮，收藏喜欢的路线"</string>
    <string name="main_map_drawer_name_nav_1">语音输入</string>
    <string name="main_map_drawer_name_nav_2">地图点选</string>
    <string name="main_map_drawer_name_nav_3">收藏选点</string>
    <string name="main_map_drawer_name_my_1">离线地图</string>
    <string name="main_map_drawer_name_my_2">工具箱</string>
    <string name="main_map_drawer_name_my_3">收藏夹</string>
    <string name="main_map_drawer_name_my_4">设置</string>
    <string name="main_map_drawer_name_my_5">位置共享</string>
    <string name="main_map_drawer_name_my_6">测距</string>
    <string name="main_map_drawer_name_my_7">意见反馈</string>
    <string name="main_map_drawer_name_my_8">退出</string>
    <string name="main_map_poi_name_1">优惠</string>
    <string name="main_map_poi_name_2">团购</string>
    <string name="main_map_poi_name_3">美食</string>
    <string name="main_map_poi_name_4">小吃快餐</string>
    <string name="main_map_poi_name_5">快捷酒店</string>
    <string name="main_map_poi_name_6">星级酒店</string>
    <string name="main_map_poi_name_7">公交站</string>
    <string name="main_map_poi_name_8">银行</string>
    <string name="main_map_poi_name_9">外卖</string>
    <string name="main_map_poi_name_10">KTV</string>
    <string name="main_map_poi_name_11">超市</string>
    <string name="main_map_poi_name_12">ATM</string>
    <string name="main_map_poi_name_13">电影院</string>
    <string name="main_map_poi_name_14">网吧</string>
    <string name="main_map_poi_name_15">洗浴</string>
    <string name="main_map_poi_name_16">商场</string>
    <string name="main_map_poi_name_17">加油站</string>
    <string name="main_map_poi_name_18">丽人</string>
    <string name="main_map_poi_name_19">咖啡厅</string>
    <string name="main_map_poi_name_20">地铁图</string>
    <string name="main_map_poi_name_21">酒吧</string>
    <string name="main_map_poi_name_22">景点</string>
    <string name="main_map_poi_name_23">医院</string>
    <string name="main_map_poi_name_24">火锅</string>
    <string name="main_map_poi_name_25">肯德基</string>
    <string name="main_map_poi_name_26">麦当劳</string>
    <string name="main_map_poi_name_27">旅馆</string>
    <string name="main_map_poi_name_28">招待所</string>
    <string name="main_map_poi_name_29">桑拿</string>
    <string name="main_map_poi_name_30">按摩</string>
    <string name="main_map_poi_name_31">足疗</string>
    <string name="main_map_poi_name_32">工商银行</string>
    <string name="main_map_poi_name_33">建设银行</string>
    <string name="main_map_poi_name_34">农业银行</string>
    <string name="main_map_poi_name_35">中国银行</string>
    <string name="main_map_poi_name_36">招商银行</string>
    <string name="main_map_poi_name_37">火车站</string>
    <string name="main_map_poi_name_38">长途汽车站</string>
    <string name="main_map_poi_name_39">药店</string>
    <string name="main_map_poi_name_40">折扣</string>
    <string name="main_map_poi_name_41">火车票</string>
    <string name="main_map_poi_name_42">厕所</string>
    <string name="main_map_poi_name_43">公园</string>
    <string name="main_map_poi_name_44">停车场</string>
    <string name="main_map_poi_name_45">学校</string>
    <string name="main_map_poi_name_46">邮局</string>
    <string name="main_map_toolbox_messure_distance">测距</string>
    <string name="main_map_toolbox_screen_snapshot">截图</string>
    <string name="main_map_toolbox_net_flow">流量统计</string>
    <string name="main_map_toolbox_subway">地铁专题</string>
    <string name="main_map_toolbox_street_scape">街景专题</string>
    <string name="main_map_toolbox_position_share">位置共享</string>
    <string name="main_map_toolbox_app_recommended">应用推荐</string>
    <string name="navOffResUrl">http://bs.baidu.com/webgis-navi-image/ResPackConf.dat</string>
    <string name="navOffResTestUrl">http://bs.baidu.com/test-webgis-navi-image/ResPackConf.dat</string>
    <string name="nav_search_btn">确定</string>
    <string name="nav_no_data_hint">输入目的地，可以直接发起导航哦~</string>
    <string name="navi_start_btn">导航</string>
    <string name="navi_node_list">列表</string>
    <string name="nav_msg_start_point_error">起点不是“定位点（我的位置）”，是否切换后，再开始导航？</string>
    <string name="nav_msg_end_point_error">“定位点（我的位置）”和终点距离过近，无法发起导航。请重新规划路线后尝试导航功能。</string>
    <string name="nav_offline_res_title">在线导航离线资源</string>
    <string name="nav_msg_del_offline_res">确认要删除\"%1$s\"?</string>
    <string name="nav_how_to_get_offline_title">获取离线资源包的途径</string>
    <string name="nav_how_to_get_offline_detail">"1、通过PC访问http://shouji.baidu.com/map，在“导航资源”页面下选择所需的离线资源包。

2、连接手机与PC，将下载的离线资源包复制到手机存储卡的/BaiduMap/nav/grid_map/目录下。

3、断开手机与PC的连接，打开百度地图，进入离线地图的“导航资源”列表，确认离线资源包下载成功。"</string>
    <string name="nav_msg_set_endpoint_error">起点和终点距离过近，不能开始导航，请重新设置目的地。</string>
    <string name="nav_msg_get_returnroute_error">起点和终点距离过近，无法获取返程</string>
    <string name="nav_cancel_Via_point_btn">删除中转点</string>
    <string name="nav_menu_offman_batsuspend">批量暂停</string>
    <string name="nav_menu_offman_batbeginload">批量下载</string>
    <string name="nav_menu_offman_batbegindelete">批量删除</string>
    <string name="nav_downloading_alert" formatted="false">[导航资源包]正在下载%1$s(未下载%2$d个)</string>
    <string name="nav_suspending_alert">[导航资源包]下载已暂停(未完成%d个)</string>
    <string name="nav_download_complete_alert">[导航资源包]已完成所有下载</string>
    <string name="navi_route_node_desc_format" formatted="false"><Data> &lt;font color=#333333>&lt;b>%1$s&lt;/b>&lt;/font>进入&lt;font color=#333333>&lt;b>%2$s&lt;/b>&lt;/font>，向前行驶&lt;font color=#333333>&lt;b>%3$S&lt;/b>&lt;/font> </Data></string>
    <string name="navi_route_node_desc_format_end" formatted="false"><Data> &lt;font color=#333333>%1$s&lt;/font>：&lt;font color=#333333>%2$s&lt;/font> </Data></string>
    <string name="navi_status_gps_waiting">正在获取GPS</string>
    <string name="navi_status_calculating">正在计算路线</string>
    <string name="navi_status_recalculating">正在重算路线</string>
    <string name="navi_calcmode_mintime">最短时间</string>
    <string name="navi_calcmode_mindist">最少距离</string>
    <string name="navi_calcmode_mintoll">不走高速</string>
    <string name="navi_calcmode_avoidtrafficjam">避开拥堵</string>
    <string name="navi_calcmode_loading">正在搜索路线信息 …</string>
    <string name="navi_my_location">我的位置</string>
    <string name="navi_end_point">终点</string>
    <string name="navi_point_on_map">地图上的点</string>
    <string name="navi_destination">目的地</string>
    <string name="navi_no_name_road">无名路</string>
    <string name="navi_gps_not_open_text">驾车导航需要卫星定位数据，请在系统设置中开启GPS!</string>
    <string name="navi_route_distance_format">剩%1$s</string>
    <string name="navi_route_time_format">时间：%1$s</string>
    <string name="navi_route_result_title">驾车方案</string>
    <string name="navi_route_back_to_map">返回</string>
    <string name="navi_route_get_return">获取返程</string>
    <string name="navi_route_set_via">设置中转点</string>
    <string name="navi_route_start_point">起点</string>
    <string name="navi_route_end_point">终点</string>
    <string name="menu_app_navi_layers2">图层</string>
    <string name="menu_app_navi_set">设置</string>
    <string name="menu_app_navi_offline">退出导航</string>
    <string name="menu_app_navi_disclaimer">免责声明</string>
    <string name="menu_app_navi_open_disclaimer">开启免责声明</string>
    <string name="menu_app_navi_close_disclaimer">关闭免责声明</string>
    <string name="menu_app_navi_setlightmaintain">屏幕常亮</string>
    <string name="menu_app_navi_modeswitch">日夜模式切换</string>
    <string name="menu_app_navi_day">白天模式</string>
    <string name="menu_app_navi_night">夜间模式</string>
    <string name="menu_app_navi_auto">自动</string>
    <string name="menu_app_navi_about">关于</string>
    <string name="menu_app_navi_button">导航切换</string>
    <string name="nav_set_via_point_btn">设置中转点</string>
    <string name="nav_get_return_btn">获取返程</string>
    <string name="nav_return_to_navi">返回导航</string>
    <string name="nav_start_navi">开始导航</string>
    <string name="nav_edit_poi_search">地点,公交,地铁 …</string>
    <string name="nav_more">更多</string>
    <string name="nav_more_earth_off">卫星图关</string>
    <string name="nav_more_earth_on">卫星图开</string>
    <string name="nav_more_its_off">路况关</string>
    <string name="nav_more_its_on">路况开</string>
    <string name="nav_more_route_view">线路详情</string>
    <string name="nav_more_set_end">设置终点</string>
    <string name="nav_more_settings">设置</string>
    <string name="nav_more_quit">退出</string>
    <string name="route_select1">系统推荐</string>
    <string name="route_select2">最少费用</string>
    <string name="route_select3">最短距离</string>
    <string name="nav_node_prev">上一步</string>
    <string name="nav_node_next">下一步</string>
    <string name="nav_route_desc" formatted="false">全程%1$s%2$s</string>
    <string name="nav_gps_exit">确认退出导航？</string>
    <string name="nav_gps_demo_exit">确认退出模拟导航？</string>
    <string name="nav_gps_over">导航已经结束,%1$d秒后退出导航。</string>
    <string name="nav_gps_demo_over">模拟导航已经结束,%1$d秒后退出导航。</string>
    <string name="nav_str_off_curcity">当前地区</string>
    <string name="nav_off_map_tip">手机下载太慢？去PC官网下载！<u>了解更多</u></string>
    <string name="nav_off_map_tip_download">当前不是%s网络，下载离线地图包将产生流量费用(具体资费情况请咨询当地运营商)，确认继续下载么？</string>
    <string name="nav_off_map_not_imported_data_tip">抱歉！您导入的为旧版离线包，新版软件已不支持，请下载新版离线包后重试。</string>
    <string name="nav_off_map_add_download">已加入下载队列</string>
    <string name="nav_settings_camera_speak_subtitle">关闭后将不再提示前方违章、测速摄像头</string>
    <string name="nav_settings_camera_speak_title">电子眼语音提示</string>
    <string name="nav_settings_over_speed_subtitle">关闭后将不再播报超速语音提示</string>
    <string name="nav_settings_over_speed_title">超速语音提示</string>
    <string name="nav_settings_keep_screen_awake_title">导航中屏幕常亮</string>
    <string name="nav_settings_keep_screen_awake">在导航界面下保持屏幕唤醒</string>
    <string name="nav_settings_lock_port_title">支持横屏模式导航</string>
    <string name="nav_settings_lock_port_subtitle">关闭后将不能使用横屏模式</string>
    <string name="nav_location_invalid">当前位置获取失败，无法发起导航，请稍后重试</string>
    <string name="nav_startendpoint_invalid">当前路线起终点获取失败，无法发起导航，请稍后重试</string>
    <string name="nav_backgroundruning_tip">百度地图将持续为您导航.</string>
    <string name="nav_gps_low_accuracy_tip">GPS信号弱.</string>
    <string name="nav_dialog_ok">确定</string>
    <string name="nav_dialog_cancel">取消</string>
    <string name="nav_dialog_setting">设置</string>
    <string name="nav_title_tip">提示</string>
    <string name="nav_title_warnning">注意</string>
    <string name="nav_title_disclaimer">免责声明</string>
    <string name="nav_dialog_accept">接受</string>
    <string name="nav_dialog_refuse">拒绝</string>
    <string name="official_website">官方网址:</string>
    <string name="website_address">http://ishouji.baidu.com/map</string>
    <string name="official_weibo">官方微博:</string>
    <string name="weibo_address">http://weibo.com/baidumap</string>
    <string name="official_qq_group">官方QQ群:</string>
    <string name="qq_group_number">218331677</string>
    <string name="check_update">检查更新</string>
    <string name="remcommend_friends">推荐好友</string>
    <string name="about_right_reserved">© 2013 baidu.com, all rights reserved</string>
    <string name="menu_fls_watch">查看所有好友位置</string>
    <string name="menu_fls_show">对所有人可见</string>
    <string name="menu_fls_hide">对所有人隐身</string>
    <string name="menu_fls_del">删除所有共享</string>
    <string name="build_num_tle">版本号:</string>
    <string name="oem_num_tle">渠道号:</string>
    <string name="public_testing_desc">此版本为测试版本，仅供众测用户测试使用。（建议非众测用户使用市场版本，以保证获得最佳产品体验。</string>
</resources>