<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/navi_node_more_linearLayout" android:background="@drawable/nav_bg_more" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@android:color/white" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="27.0dip" android:text="@string/nav_more" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="60.0dip">
        <TextView android:textSize="12.0sp" android:textColor="@android:color/black" android:gravity="bottom|center" android:layout_gravity="center" android:id="@id/TextView_set_end" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/nav_more_set_end" android:singleLine="true" android:drawableTop="@drawable/nav_btn_more_set_end" android:layout_weight="1.0" />
        <TextView android:textSize="12.0sp" android:textColor="@android:color/black" android:gravity="bottom|center" android:layout_gravity="center" android:id="@id/TextView_set_via" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/nav_set_via_point_btn" android:singleLine="true" android:drawableTop="@drawable/nav_btn_more_set_via" android:layout_weight="1.0" />
        <TextView android:textSize="12.0sp" android:textColor="@android:color/black" android:gravity="bottom|center" android:layout_gravity="center" android:id="@id/TextView_get_return" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/nav_get_return_btn" android:singleLine="true" android:drawableTop="@drawable/nav_btn_more_return" android:layout_weight="1.0" />
        <TextView android:textSize="12.0sp" android:textColor="@android:color/black" android:gravity="bottom|center" android:layout_gravity="center" android:id="@id/TextView_its" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/nav_more_its_off" android:singleLine="true" android:drawableTop="@drawable/nav_btn_more_its" android:layout_weight="1.0" />
    </LinearLayout>
    <View android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="60.0dip">
        <TextView android:textSize="12.0sp" android:textColor="@android:color/black" android:gravity="bottom|center" android:layout_gravity="center" android:id="@id/TextView_earth" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/nav_more_earth_off" android:singleLine="true" android:drawableTop="@drawable/nav_btn_more_earth" android:layout_weight="1.0" />
        <TextView android:textSize="12.0sp" android:textColor="@android:color/black" android:gravity="bottom|center" android:layout_gravity="center" android:id="@id/TextView_route_view" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/nav_more_route_view" android:singleLine="true" android:drawableTop="@drawable/nav_btn_more_route_view" android:layout_weight="1.0" />
        <TextView android:textSize="12.0sp" android:textColor="@android:color/black" android:gravity="bottom|center" android:layout_gravity="center" android:id="@id/TextView_more_settings" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/nav_more_settings" android:singleLine="true" android:drawableTop="@drawable/nav_btn_more_settings" android:layout_weight="1.0" />
        <TextView android:textSize="12.0sp" android:textColor="@android:color/black" android:gravity="bottom|center" android:layout_gravity="center" android:id="@id/TextView_quit" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/nav_more_quit" android:singleLine="true" android:drawableTop="@drawable/nav_btn_more_quit" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
