<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:background="#fff7f7f7" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/about_top_bar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/title_bar" />
    </LinearLayout>
    <ScrollView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/about_icon_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip">
                <ImageView android:layout_gravity="center_horizontal" android:id="@id/baidu_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/set_about_icon" />
                <TextView android:textColor="#ff333333" android:id="@id/set_about_version" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView android:textSize="12.0dip" android:textColor="#ff333333" android:id="@id/public_testing_desc" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/public_testing_desc" />
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/about_official" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip">
                <LinearLayout android:orientation="horizontal" android:id="@id/build_num_layout" android:padding="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:weightSum="2.0">
                    <TextView android:textSize="14.0dip" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/build_num_tle" />
                    <TextView android:textSize="14.0dip" android:textColor="#ff0064df" android:autoLink="none" android:id="@id/build_num" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/oem_num_layout" android:padding="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:weightSum="2.0">
                    <TextView android:textSize="14.0dip" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/oem_num_tle" />
                    <TextView android:textSize="14.0dip" android:textColor="#ff0064df" android:autoLink="none" android:id="@id/oem_num" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/about_official_qq" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:weightSum="2.0">
                    <TextView android:textSize="14.0dip" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/official_qq_group" />
                    <TextView android:textSize="14.0dip" android:textColor="#ff0064df" android:autoLink="none" android:id="@id/official_qq" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/qq_group_number" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/about_official_website" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:weightSum="2.0">
                    <TextView android:textSize="14.0dip" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/official_website" />
                    <TextView android:textSize="14.0dip" android:textColor="#ff0064df" android:autoLink="web" android:id="@id/official_website" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/website_address" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/about_official_weibo" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:weightSum="2.0">
                    <TextView android:textSize="14.0dip" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/official_weibo" />
                    <TextView android:textSize="14.0dip" android:textColor="#ff0064df" android:autoLink="web" android:id="@id/official_weibo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/weibo_address" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/about_other_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:weightSum="3.0">
                <Button android:textColor="#ff333333" android:id="@id/check_version_update" android:background="@drawable/btn_set_about" android:padding="5.0dip" android:layout_width="84.0dip" android:layout_height="40.0dip" android:text="@string/check_update" />
                <Button android:textColor="#ff333333" android:id="@id/recommend_to_friends" android:background="@drawable/btn_set_about" android:padding="5.0dip" android:layout_width="84.0dip" android:layout_height="40.0dip" android:layout_marginLeft="-1.0dip" android:text="@string/remcommend_friends" />
                <Button android:textColor="#ff333333" android:id="@id/service_terms" android:background="@drawable/btn_set_about" android:padding="5.0dip" android:layout_width="84.0dip" android:layout_height="40.0dip" android:layout_marginLeft="-1.0dip" android:text="服务条款" />
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/about_bottom" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginBottom="10.0dip">
                <TextView android:textSize="10.0dip" android:textColor="#ff686868" android:gravity="bottom" android:id="@id/about_right_reserved" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="20.0dip" android:text="@string/about_right_reserved" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
