<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/center" android:layout_width="1.0dip" android:layout_height="1.0dip" android:layout_centerHorizontal="true" />
    <Button android:id="@id/btn_examine_all_fri" android:background="@drawable/btn_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:layout_marginBottom="5.0dip" android:text="@string/menu_fls_watch" android:layout_toLeftOf="@id/center" android:layout_alignParentLeft="true" style="@style/Text.defButton" />
    <Button android:id="@id/btn_showto_all_fri" android:background="@drawable/btn_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginBottom="5.0dip" android:text="@string/menu_fls_show" android:layout_toRightOf="@id/center" android:layout_alignParentRight="true" style="@style/Text.defButton" />
    <Button android:id="@id/btn_hideto_all_fri" android:background="@drawable/btn_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:text="@string/menu_fls_hide" android:layout_toLeftOf="@id/center" android:layout_below="@id/btn_examine_all_fri" android:layout_alignParentLeft="true" style="@style/Text.defButton" />
    <Button android:id="@id/btn_del_all_fri" android:background="@drawable/btn_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/menu_fls_del" android:layout_toRightOf="@id/center" android:layout_below="@id/btn_showto_all_fri" android:layout_alignParentRight="true" style="@style/Text.defButton" />
</merge>
