<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="bottom" android:background="@drawable/nav_list_selector_default" android:addStatesFromChildren="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="left" android:orientation="horizontal" android:id="@id/route_result_title_layout" android:background="@drawable/nav_bg_route_result_title" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <Button android:textAppearance="?android:textAppearanceMedium" android:textSize="16.0dip" android:textColor="#ff333333" android:layout_gravity="center" android:id="@id/result_back_to_map" android:background="@drawable/nav_btn_back" android:layout_width="52.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/navi_route_back_to_map" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="20.0dip" android:textColor="#ff333333" android:gravity="center" android:layout_gravity="center" android:id="@id/result_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="55.0dip" android:layout_marginRight="107.0dip" android:text="@string/navi_route_result_title" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/route_calcmode_switch_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:textAppearance="?android:textAppearanceMedium" android:textColor="#ffb3b3b3" android:layout_gravity="center" android:id="@id/nav_calcmode_avoidtrafficjam_btn" android:background="#ff333333" android:layout_width="wrap_content" android:layout_height="45.0dip" android:text="@string/navi_calcmode_avoidtrafficjam" android:layout_weight="1.0" />
        <Button android:textAppearance="?android:textAppearanceMedium" android:textColor="#ffffffff" android:layout_gravity="center" android:id="@id/nav_calcmode_mintime_btn" android:background="#ff333333" android:layout_width="wrap_content" android:layout_height="45.0dip" android:text="@string/navi_calcmode_mintime" android:drawableTop="@drawable/nav_ic_calcmode_switch" android:layout_weight="1.0" />
        <Button android:textAppearance="?android:textAppearanceMedium" android:textColor="#ffb3b3b3" android:layout_gravity="center" android:id="@id/nav_calcmode_mindist_btn" android:background="#ff333333" android:layout_width="wrap_content" android:layout_height="45.0dip" android:text="@string/navi_calcmode_mindist" android:layout_weight="1.0" />
        <Button android:textAppearance="?android:textAppearanceMedium" android:textColor="#ffb3b3b3" android:layout_gravity="center" android:id="@id/nav_calcmode_mindtoll_btn" android:background="#ff333333" android:layout_width="wrap_content" android:layout_height="45.0dip" android:text="@string/navi_calcmode_mintoll" android:layout_weight="1.0" />
    </LinearLayout>
    <RelativeLayout android:id="@id/route_result_list_view" android:focusable="true" android:addStatesFromChildren="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="-2.0dip" android:layout_above="@id/route_calcmode_switch_layout" android:layout_below="@id/route_result_title_layout">
        <ListView android:id="@id/result_list" android:focusable="true" android:addStatesFromChildren="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:cacheColorHint="#00000000" />
    </RelativeLayout>
</RelativeLayout>
