<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/navi_node_desc_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="left" android:orientation="horizontal" android:id="@id/nav_node_title_layout" android:background="@drawable/nav_bg_title_no_shadow" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <Button android:textAppearance="?android:textAppearanceMedium" android:textSize="16.0dip" android:textColor="#ff333333" android:layout_gravity="center" android:id="@id/btn_start_navi" android:background="@drawable/nav_btn_back_to_map" android:layout_width="76.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/nav_return_to_navi" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="20.0dip" android:textColor="#ff333333" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_node_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/navi_route_result_title" android:layout_weight="1.0" />
        <Button android:textAppearance="?android:textAppearanceMedium" android:textSize="16.0dip" android:textColor="#ff333333" android:layout_gravity="center" android:id="@id/btn_node_list" android:background="@drawable/nav_btn_back_to_map" android:layout_width="48.0dip" android:layout_height="wrap_content" android:layout_marginLeft="28.0dip" android:layout_marginRight="10.0dip" android:text="@string/navi_node_list" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/nav_info_linear_layout" android:background="@drawable/nav_bg_start_info" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/nav_node_title_layout">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ffffffff" android:gravity="center" android:id="@id/nav_tv_info" android:clickable="false" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
    </LinearLayout>
    <ImageButton android:id="@id/node_prev" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginBottom="1.0dip" android:src="@drawable/nav_btn_node_pre" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:contentDescription="@string/nav_node_prev" />
    <ImageButton android:id="@id/node_next" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="1.0dip" android:src="@drawable/nav_btn_node_next" android:layout_toRightOf="@id/node_prev" android:layout_alignParentBottom="true" android:contentDescription="@string/nav_node_next" />
</RelativeLayout>
